frontend/k8s/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litter
spec:
  template:
    spec:
      containers:
        - name: litter
