frontend/k8s/overlays/staging/litter-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: litter-staging
  namespace: staging
